@@ -20,35 +20,21 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import uk.gov.gchq.gaffer.data.element.Element;
-import uk.gov.gchq.gaffer.data.element.Entity;
 import uk.gov.gchq.gaffer.federatedstore.operation.AddGraph;
-import uk.gov.gchq.gaffer.federatedstore.operation.FederatedOperation;
 import uk.gov.gchq.gaffer.federatedstore.operation.GetAllGraphInfo;
-import uk.gov.gchq.gaffer.operation.OperationChain;
-import uk.gov.gchq.gaffer.operation.impl.DiscardOutput;
-import uk.gov.gchq.gaffer.operation.impl.add.AddElements;
-import uk.gov.gchq.gaffer.operation.impl.export.set.ExportToSet;
-import uk.gov.gchq.gaffer.operation.impl.export.set.GetSetExport;
-import uk.gov.gchq.gaffer.operation.impl.get.GetAllElements;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.ACCUMULO_STORE_SINGLE_USE_PROPERTIES;
-import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.BASIC_VERTEX;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.GRAPH_ID_A;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.GRAPH_ID_B;
-import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.GRAPH_ID_C;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.GRAPH_ID_TEST_FEDERATED_STORE;
-import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.GROUP_BASIC_ENTITY;
-import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.PROPERTY_1;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.basicEntitySchema;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.contextBlankUser;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.loadAccumuloStoreProperties;
 import static uk.gov.gchq.gaffer.federatedstore.FederatedStoreTestUtil.resetForFederatedTests;
-import static uk.gov.gchq.gaffer.federatedstore.util.FederatedStoreUtil.DEPRECATED_GRAPHIDS_OPTION;
 
 public class FederatedStoreGraphInfoTest {
     private FederatedStore federatedStore;
@@ -93,7 +79,7 @@ public class FederatedStoreGraphInfoTest {
 
         // When / Then
         assertThat(results)
-                .containsOnlyKeys(List.of(GRAPH_ID_A));
+                .containsOnlyKeys(Arrays.asList(GRAPH_ID_A));
     }
 
     @Test
@@ -106,7 +92,7 @@ public class FederatedStoreGraphInfoTest {
 
         // When / Then
         assertThat(results)
-                .containsOnlyKeys(List.of(GRAPH_ID_B));
+                .containsOnlyKeys(Arrays.asList(GRAPH_ID_B));
     }
 
 
@@ -115,12 +101,12 @@ public class FederatedStoreGraphInfoTest {
         // Given
         Map<String, Object> results = federatedStore.execute(
                 new GetAllGraphInfo.Builder()
-                        .graphIDs(List.of(GRAPH_ID_A, GRAPH_ID_B))
+                        .graphIDs(Arrays.asList(GRAPH_ID_A, GRAPH_ID_B))
                         .excludedGraphIdsCSV(GRAPH_ID_A)
                         .build(), contextBlankUser());
 
         // When / Then
         assertThat(results)
-                .containsOnlyKeys(List.of(GRAPH_ID_B));
+                .containsOnlyKeys(Arrays.asList(GRAPH_ID_B));
     }
 }
